# ePaper-rust3

./: Cargo.toml  README.md  pruebas.ipynb  request.py  request2.py
src/: api.rs  display_interface.rs  main.rs  wifi.rs
